--- a/modules/ROOT/pages/tools/antora.adoc
+++ b/modules/ROOT/pages/tools/antora.adoc
@@ -2,7 +2,7 @@
 
 image:icons/antora.png[Antora logo,50,50] 
 
-With a tagline that claims it's a "site generator for tech writers who love writing AsciiDocs" I had to give Antora a try. In fact, it's what I wrote this portfolio with. Compared to Flare and Hugo, it stands out in its ability to leverage Git and AsciiDoc to deliver scalable docs with ease.
+With a tagline that claims it's a "site generator for tech writers who love writing AsciiDocs" I had to give Antora a try. In fact, it's what I wrote this portfolio with. Compared to Flare and Hugo, it stands out with how it leverages Git and AsciiDoc to scale docs with ease.
 
 == Structured configuration
 
@@ -10,7 +10,7 @@ Antora's project structure is strict, which is actually a strength. It requires 
 
 Since Antora sources content from repo URLs, Git becomes a powerful tool in your deployment pipeline. You can run different branches of your playbook project that automatically deploy to production or test environments, depending on how you define branches.
 
-For example, I've configured this project to deploy feature branches according to a pattern search for `'feature/*`. My favorite part of this configuration is that it's dynamic. If new feature branches get created, they're generated the next time the site builds. Once a feature branch is deleted, it's removed on the next build.
+For example, I've configured this project to deploy feature branches according to a pattern search for `'feature/*`. This search is dynamic, so if you add new feature branches following the `feature/` naming convention, they're generated in the next build. Once you delete a feature branch, it's removed.
 
 [source,yaml]
 ----
@@ -20,11 +20,11 @@ content:
     branches: [main, 'feature/*']
 ----
 
-Click the version toolbar in the lower-left corner of the screen to display the `feature-abc` and [branch]`feature-xyz` feature branches. To indicate they're prerelease docs, their `antora.yml` file specifices an `-alpha`
+Click the version toolbar in the lower-left corner of the screen to display the `feature-abc` and [branch]`feature-xyz` feature branches. To indicate they're prerelease docs, their `antora.yml` file specifies an `-alpha`
 
 == Easy scaling
 
-Want to add new projects to your docs site? Just add the Git repo to the sources block in your `antora-playbook.yml`, specify a branch, and a `nav.adoc` file. Once configured, it's included in the next build.
+Want to add new projects to your docs site? Just add the Git repo to the sources block in your `antora-playbook.yml`, specify a branch, and add a `nav.adoc` file. Once configured, it's included in the next build. This approach of "hot-swapping" repos lets you handle sources in a single configuration file rather than as directory paths within a monolith project. This is much faster and more centralized than Global Project Linking
 
 == AsciiDoc over traditional Markdown
 
@@ -44,7 +44,7 @@ emphasis on single-sourcing for different outputs. common example is for adminis
 
 Single source content (and output depending on audience) with attributes that you include or exclude. This means you don't have to have two versions of the same doc--it all lives on the same page (balancing act). Can define attributes in dedicated files and source them.
 
-The below code sampe shows admonitions with conditional directives for specific audiences (admin and internal). 
+The below code sample shows admonitions with conditional directives for specific audiences (`admin` and `internal`). 
 
 [source, asciidoc]
 ----
