--- a/modules/ROOT/pages/writing-samples/xhtml.adoc
+++ b/modules/ROOT/pages/writing-samples/xhtml.adoc
@@ -1,12 +1,9 @@
-= Feature docs
+= XHTML
 
 Introduce fictional company, RTFM-Industries. Tailor all samples to RTFM-Industries (update intros).
-
-== XHTML
-
 Samples from MadCap Flare.
 
-=== Documentation dashboards overview
+== Documentation dashboards overview
 
 View feature documentation for the fictional RTFM-Industries Documentation Dashboard feature.
 The following link:../../overview/#_topic_typing[concept documentation] introduces RTFM-Industries Documentation Dashboards, a splendid feature that helps tech writers do their jobs more effectively.
@@ -18,7 +15,7 @@ include::example$documentation-dashboards-overview.html[]
 ----
 
 
-=== Create a new documentation dashboard
+== Create a new documentation dashboard
 
 The following link:../../overview/#_topic_typing[task] instructs users how to create a new Documentation Dashboard that evaluates the effectiveness of published documentation.
 
@@ -28,7 +25,7 @@ The following link:../../overview/#_topic_typing[task] instructs users how to cr
 include::example$documentation-dashboards-create.html[]
 ----
 
-=== Invoicing setup
+== Invoicing setup
 
 .Invoicing setup for documentation dashboards
 [source,html]
@@ -36,7 +33,7 @@ include::example$documentation-dashboards-create.html[]
 include::example$invoicing-setup.html[]
 ----
 
-=== Match an invoice 
+== Match an invoice 
 
 .Match an invoice
 [source,html]
@@ -44,22 +41,11 @@ include::example$invoicing-setup.html[]
 include::example$match-invoice.html[]
 ----
 
-== AsciiDoc
+== Release notes
 
-Hugo or from this portfolio.
+Release notes to the fictional RTFM-Industries release (v1.1.0) are below. For many users, release notes may be their only interaction with software documentation, which makes it a unique document.
 
-=== Configure notifications (AsciiDoc) 
-
-[source,asciidoc]
+[source,HTML]
 ----
-include::example$notification-config.adoc[lines=4..-1]
-----
-
-=== Writing samples page
-
-The raw AsciiDoc syntax of this page.
-
-[source,asciidoc,wrap=word]
-----
-include::page$/tools/git.adoc[]
+includes::example$release-notes.html[]
 ----
