--- a/modules/ROOT/pages/tools/antora.adoc
+++ b/modules/ROOT/pages/tools/antora.adoc
@@ -60,7 +60,7 @@ include::example$/antora-conditional-directives.adoc[]
 ifdef::admin[]
 [IMPORTANT]
 .Administrator note
-
+{admin}
 This information is relevant to administrators.
 endif::admin[]
 
