--- a/modules/ROOT/pages/tools/antora.adoc
+++ b/modules/ROOT/pages/tools/antora.adoc
@@ -40,7 +40,11 @@ At a certain point relative paths turn ugly: `\include::../../../../../feature-x
 
 === Conditional directives
 
-Conditional directives in AsciiDoc help filter content based on output. Single-sourcing your docs like this can mean differentiating online vs. print content or only showing certain content to an audience.
+Conditional directives in AsciiDoc help filter content based on output. This feature is most helpful for brief amounts of content that don't warrent their own page. Conditional directives let you single-source your docs while differentiating online vs. print content or only showing certain content to an audience.
+
+ifdef: If you don't delcare the attribute in your antora-playbook.yml, page header, or in your command line call, it's not included.
+
+ifndef: todo...
 
 Here are two common examples.
 
