--- a/modules/ROOT/pages/resume.adoc
+++ b/modules/ROOT/pages/resume.adoc
@@ -1,8 +1,26 @@
 = Resume
 
-ifeval::["{backend}" == "html5"]
+Experienced tech writer (5+ years) with an emphasis on Agile methodology, docs-as-code processes, and
+clear communication over jumbled jargon.
+
+ifdef::["{backend}" == "html5"]
 xref:attachment$resume.pdf[Download PDF]
 endif::[]
+
+[cols="^,^"]
+|===
+| Column 1
+| Column 2
+
+| * MadCap Flare
+| * Hugo
+| * Antora
+| * Jira & Confluence
+| * Git/GitHub
+| * Agile methodology
+| * Snagit
+| * Editing
+|===
 
 == Job 1
 
